fix mozilla scrollbar and resize

--- a/src/appPages/GamePage/GamePage.module.scss
+++ b/src/appPages/GamePage/GamePage.module.scss
@@ -11,6 +11,7 @@
     &::-webkit-scrollbar {
         width: 0;
     }
+    scrollbar-width: none;
 }
 
 .inputsContainer {
